Add module descriptors where possible
* Make them compile-time only where dependencies do not declare
  stable module names
* Bungee is full of split packages so don't attempt a descriptor